Fix event footer positioning on IE 11

--- a/src/app/scheduler/event/event.component.scss
+++ b/src/app/scheduler/event/event.component.scss
@@ -13,7 +13,7 @@
   &.compact {
     flex-direction: row;
     justify-content: center;
-    span:first-child::after {
+    span::after {
       content: '-';
       margin: 0 6px;
     }
